# OAT

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  demo.oat  example.fa  pyproject.toml  test.gff3  test.oat
.github/workflows/: tests.yml
examples/genbank/: example.gb  sequence (2).gb:Zone.Identifier
examples/tbl/: example.tbl
oat/: __init__.py  cli.py  project_io.py
oat/cli/: compare.py  errors.py  export.py  main.py  summary.py  validate.py
oat/compare/: __init__.py  comparison.py  pipeline.py  report.py
oat/conflicts/: conflict.py
oat/consensus/: compare.py  comparison.py  consensus.py  genome_comparison.py  merge.py  report.py
oat/export/: __init__.py  base.py  fasta.py  gff3.py
oat/io/: __init__.py
oat/merge/: evidence.py
oat/models/: evidence.py  feature.py  genome.py  project.py
oat/naming/: __init__.py  aliases.py  canonical.py
oat/parsers/: base.py  genbank.py  genbank_metadata.py  parser_utils.py  tbl.py
oat/validation/: __init__.py  duplicates.py  missing.py  overlaps.py  pipeline.py  report.py
tests/: test_cli.py  test_conflicts.py  test_consensus.py  test_genbank.py  test_genome.py  test_project_io.py  test_read.py  test_tbl.py  test_validation.py
